--- a/public/index.html
+++ b/public/index.html
@@ -732,22 +732,22 @@ body.webview #tarjetaCard {
 /* INICIO BLOQUE ENVIAFLORES */
 .btn-enviaflores {
   width: 100%;
-  background: linear-gradient(135deg, #E91E63, #FF6B9D);
+  background: #080808;
   color: white;
   border: none;
   box-shadow: 
-    0 6px 20px -6px rgba(233, 30, 99, 0.4),
+    0 6px 20px -6px rgba(0, 0, 0, 0.4),
     0 0 0 1px rgba(255,255,255, 0.1);
 }
 
 .btn-enviaflores:hover {
   box-shadow: 
-    0 8px 24px -6px rgba(233, 30, 99, 0.5),
+    0 8px 24px -6px rgba(0, 0, 0, 0.5),
     0 0 0 1px rgba(255,255,255, 0.15);
 }
 
 .btn-enviaflores img {
-  height: 18px;
+  height: 20px;
   width: auto;
   display: block;
 }
@@ -764,7 +764,7 @@ body.webview #tarjetaCard {
 }
 
 .triggui-logo-footer img { 
-  height: 22px; 
+  height: 20px; 
   width: auto; 
   display: block; 
 }
