--- a/public/index.html
+++ b/public/index.html
@@ -659,6 +659,7 @@ body.webview #tarjetaCard {
   display: grid;
   grid-template-columns: 2fr 1fr;
   gap: 10px;
+  align-items: stretch;
 }
 
 /* Estilo Base Botón */
@@ -711,6 +712,7 @@ body.webview #tarjetaCard {
   border: 1px solid rgba(0,0,0,0.08);
   color: inherit;
   aspect-ratio: 1;
+  height: 100%;
   padding: 0;
 }
 
@@ -754,7 +756,7 @@ body.webview #tarjetaCard {
 }
 
 .btn-enviaflores img {
-  height: 20px;
+  height: 22px;
   width: auto;
   display: block;
 }
