--- a/public/index.html
+++ b/public/index.html
@@ -659,7 +659,6 @@ body.webview #tarjetaCard {
   display: grid;
   grid-template-columns: 2fr 1fr;
   gap: 10px;
-  align-items: stretch;
 }
 
 /* Estilo Base Botón */
@@ -711,8 +710,10 @@ body.webview #tarjetaCard {
   background: rgba(125,125,125,0.06);
   border: 1px solid rgba(0,0,0,0.08);
   color: inherit;
-  aspect-ratio: 1;
-  height: 100%;
+  width: 48px;
+  height: 48px;
+  padding: 0;
+}
   padding: 0;
 }
 
@@ -756,7 +757,7 @@ body.webview #tarjetaCard {
 }
 
 .btn-enviaflores img {
-  height: 22px;
+  height: 23px;
   width: auto;
   display: block;
 }
