--- a/public/index.html
+++ b/public/index.html
@@ -1485,7 +1485,7 @@ btnShare.onclick = () => {
            class="btn-action btn-enviaflores">
            <img src="https://raw.githubusercontent.com/badirnakid/triggui-app/main/public/enviaflores-logo.png" 
                 alt="Envía Flores">
-           <span>Únelo a un detalle</span>
+           <span>Únelo a un regalo</span>
         </a>
         </div>
     </div>
