--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://www.enviaflores.com" crossorigin>
 <link rel="preconnect" href="https://www.buscalibre.com.mx" crossorigin>
 <link rel="dns-prefetch" href="https://www.enviaflores.com">
+<link rel="dns-prefetch" href="https://www.buscalibre.com.mx">
 
 <!-- 🎯 PRE-CARGA CRÍTICA DE IMÁGENES (NIVEL DIOS) -->
 <link rel="preload" as="image" href="https://raw.githubusercontent.com/badirnakid/triggui-app/main/public/trigguiletras2.png">
