--- a/public/index.html
+++ b/public/index.html
@@ -1549,7 +1549,7 @@ btnShare.onclick = () => {
              rel="noopener noreferrer"
              class="btn-action btn-explorar"
              data-action="buscalibre-explorar">
-             <span class="btn-emoji">🎉</span>
+             <span class="btn-emoji">✨</span>
           </a>
         </div>
         
