--- a/public/index.html
+++ b/public/index.html
@@ -679,10 +679,40 @@ body.webview #tarjetaCard {
   color: inherit;
   height: 48px;
   padding: 0;
+  /* 🎯 ANIMACIÓN BREATHE LÚDICA - Nivel Dios */
+  animation: btn-breathe 2.5s ease-in-out infinite;
+}
+
+@keyframes btn-breathe {
+  0%, 100% { 
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(125,125,125,0);
+  }
+  50% { 
+    transform: scale(1.08);
+    box-shadow: 0 0 12px 2px rgba(125,125,125,0.15);
+  }
+}
+
+.btn-explorar:hover {
+  /* Intensifica el breathe en hover */
+  animation: btn-breathe-intense 1.5s ease-in-out infinite;
+}
+
+@keyframes btn-breathe-intense {
+  0%, 100% { 
+    transform: scale(1.05);
+    box-shadow: 0 0 8px 1px rgba(125,125,125,0.2);
+  }
+  50% { 
+    transform: scale(1.15);
+    box-shadow: 0 0 16px 4px rgba(125,125,125,0.3);
+  }
 }
 
 .btn-explorar:active { 
-  background: rgba(125,125,125,0.12); 
+  background: rgba(125,125,125,0.12);
+  animation: none; /* Detiene animación en active */
 }
 
 .card-dark-mode .btn-explorar {
@@ -690,8 +720,24 @@ body.webview #tarjetaCard {
   border: 1px solid rgba(255,255,255,0.15);
 }
 
+@keyframes btn-breathe-dark {
+  0%, 100% { 
+    transform: scale(1);
+    box-shadow: 0 0 0 0 rgba(255,255,255,0);
+  }
+  50% { 
+    transform: scale(1.08);
+    box-shadow: 0 0 12px 2px rgba(255,255,255,0.15);
+  }
+}
+
+.card-dark-mode .btn-explorar {
+  animation: btn-breathe-dark 2.5s ease-in-out infinite;
+}
+
 .card-dark-mode .btn-explorar:active { 
-  background: rgba(255,255,255,0.15); 
+  background: rgba(255,255,255,0.15);
+  animation: none;
 }
 
 .btn-emoji {
@@ -1549,7 +1595,7 @@ btnShare.onclick = () => {
              rel="noopener noreferrer"
              class="btn-action btn-explorar"
              data-action="buscalibre-explorar">
-             <span class="btn-emoji">✨</span>
+             <span class="btn-emoji">🔮</span>
           </a>
         </div>
         
